--- a/Examples/A2_standard_discrete_distributions.ipynb
+++ b/Examples/A2_standard_discrete_distributions.ipynb
@@ -1,32 +1,11 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
-   "source": [
-    "# Examples: A2 Standard discrete distributions"
-   ],
    "cell_type": "markdown",
-   "metadata": {}
+   "metadata": {},
+   "source": [
+    "# A2 Standard discrete distributions"
+   ]
   },
   {
    "cell_type": "code",
@@ -38,13 +17,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 1 Binomial distribution"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 2.1.1\n",
     "\n",
@@ -61,9 +42,7 @@
     "**(d)** $E(X)$\n",
     "\n",
     "**(e)** $S(X)$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -76,6 +55,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
@@ -86,9 +67,7 @@
     "$$\n",
     "\n",
     "So the probability $P(X=5) = p(5) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -96,14 +75,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.165146"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -111,6 +90,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b) The probability $P(X \\leq x) = F(x)$ for a **binomial distribution** is \n",
     "\n",
@@ -119,9 +100,7 @@
     "$$\n",
     "\n",
     "So the probability $P(X \\leq 7) = F(7) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -129,14 +108,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.9827"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 4
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -144,13 +123,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (c)\n",
     "\n",
     "The probability $P(2 \\leq X < 9) = F(8) - F(2) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -158,14 +137,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.759719"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -173,6 +152,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (d)\n",
     "\n",
@@ -181,9 +162,7 @@
     "$$\n",
     "E(X) = np = \\cdots\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -191,14 +170,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3.75"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -206,6 +185,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (e)\n",
     "\n",
@@ -214,9 +195,7 @@
     "$$\n",
     "S(X) = \\sqrt{V(X)} = \\sqrt{np(1-p)} = \\cdots\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -224,14 +203,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1.677051"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -239,13 +218,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 2 Discrete uniform distribution"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 2.2.1\n",
     "\n",
@@ -262,9 +243,7 @@
     "**(d)** $E(X)$\n",
     "\n",
     "**(e)** $S(X)$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -277,6 +256,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
@@ -287,9 +268,7 @@
     "$$\n",
     "\n",
     "So $P(X=109) = p(109) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -297,14 +276,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.0025"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -312,6 +291,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
@@ -322,9 +303,7 @@
     "$$\n",
     "\n",
     "So the probability $P(X > 246) = 1 - F(245) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -332,14 +311,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.6375"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 10
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -347,13 +326,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (c)\n",
     "\n",
     "The probability $P(361 < X < 420) = F(419) - F(361) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -361,14 +340,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.145"
       ]
      },
+     "execution_count": 11,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -376,6 +355,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (d)\n",
     "\n",
@@ -384,9 +365,7 @@
     "$$\n",
     "E(X) = \\frac{n+m}{2} = \\cdots\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -394,14 +373,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "300.5"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "execution_count": 12
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -409,6 +388,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (e)\n",
     "\n",
@@ -417,9 +398,7 @@
     "$$\n",
     "V(X) = \\frac{1}{12} \\> (n-m)(n-m+2) = \\cdots\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -427,14 +406,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "13333.25"
       ]
      },
+     "execution_count": 13,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -442,13 +421,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 3 Geometric distribution"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 2.3.1\n",
     "\n",
@@ -465,9 +446,7 @@
     "**(d)** $E(X)$\n",
     "\n",
     "**(e)** $V(X)$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -480,6 +459,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
@@ -490,9 +471,7 @@
     "$$\n",
     "\n",
     "So the probability $P(X=3) = p(3) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -500,14 +479,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.147456"
       ]
      },
+     "execution_count": 15,
      "metadata": {},
-     "execution_count": 15
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -515,6 +494,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
@@ -525,9 +506,7 @@
     "$$\n",
     "\n",
     "So the probability $P(X \\leq 4) = F(4) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -535,14 +514,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.832228"
       ]
      },
+     "execution_count": 16,
      "metadata": {},
-     "execution_count": 16
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -550,13 +529,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (c)\n",
     "\n",
     "The probability $P(1 < X < 5) = F(4) - F(2) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -564,14 +543,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.241828"
       ]
      },
+     "execution_count": 17,
      "metadata": {},
-     "execution_count": 17
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -579,6 +558,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (d)\n",
     "\n",
@@ -587,9 +568,7 @@
     "$$\n",
     "E(X) = \\frac{1}{p} = \\cdots\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -597,14 +576,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "2.777778"
       ]
      },
+     "execution_count": 18,
      "metadata": {},
-     "execution_count": 18
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -612,6 +591,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (e)\n",
     "\n",
@@ -620,9 +601,7 @@
     "$$\n",
     "V(X) = \\frac{1-p}{p^{2}} = \\cdots\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -630,14 +609,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "4.938272"
       ]
      },
+     "execution_count": 19,
      "metadata": {},
-     "execution_count": 19
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -645,13 +624,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 4 Poisson distribution"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Example 2.4.1\n",
     "\n",
@@ -668,9 +649,7 @@
     "Note, the mean, variance, and standard deviation of a Poisson distribution with parameter $\\lambda$ are\n",
     "\n",
     "$$E(X) = \\lambda; \\hspace{2mm} V(X) = \\lambda; \\hspace{2mm} S(X) = \\sqrt{\\lambda}.$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -683,6 +662,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
@@ -693,9 +674,7 @@
     "$$\n",
     "\n",
     "So the probability $P(X=5) = p(5) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -703,14 +682,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.120286"
       ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "execution_count": 21
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -718,6 +697,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
@@ -728,9 +709,7 @@
     "$$\n",
     "\n",
     "So the probability $P(X \\leq 2) = F(2) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -738,14 +717,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.359426"
       ]
      },
+     "execution_count": 22,
      "metadata": {},
-     "execution_count": 22
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -753,13 +732,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (c)\n",
     "\n",
     "The probability $P(X > 4) = 1 - F(4) = \\cdots$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -767,14 +746,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.23741"
       ]
      },
+     "execution_count": 23,
      "metadata": {},
-     "execution_count": 23
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -782,6 +761,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### 2.4.2 (June 2020)\n",
     "\n",
@@ -794,11 +775,11 @@
     "**(b)** Calculate the probability that, in a typical hour, 12 customers will arrive at the sports centre.\n",
     "\n",
     "**(c)** Suppose that in a typical hour 15 customers arrive at the sports centre. Calculate the probability that 3 of these customers will choose to use the gym."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (a)\n",
     "\n",
@@ -809,9 +790,7 @@
     "$$\n",
     "P(S=8) = p(8) = (1-p)^{7} \\> p = \\cdots\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -829,14 +808,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.041943"
       ]
      },
+     "execution_count": 25,
      "metadata": {},
-     "execution_count": 25
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -844,6 +823,8 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (b)\n",
     "\n",
@@ -855,9 +836,7 @@
     "$$\n",
     "p(12) = e^{-20} \\bigg( \\frac{20^{12}}{12!} \\bigg) = \\cdots\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -870,26 +849,28 @@
    ]
   },
   {
-   "source": [
-    "round(x.pmf(k=12), 6)"
-   ],
    "cell_type": "code",
-   "metadata": {},
    "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.017625"
       ]
      },
+     "execution_count": 27,
      "metadata": {},
-     "execution_count": 27
+     "output_type": "execute_result"
     }
+   ],
+   "source": [
+    "round(x.pmf(k=12), 6)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "#### (c)\n",
     "\n",
@@ -908,9 +889,7 @@
     "$$\n",
     "p(3) = e^{-2.25} \\bigg( \\frac{2.25^{3}}{3!} \\bigg) = \\cdots\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
@@ -928,19 +907,40 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.200094"
       ]
      },
+     "execution_count": 29,
      "metadata": {},
-     "execution_count": 29
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "round(y.pmf(k=3), 6)"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
