--- a/notebooks/Ex03_Binomial.ipynb
+++ b/notebooks/Ex03_Binomial.ipynb
@@ -62,9 +62,7 @@
     "## (a)\n",
     "\n",
     "Let $X$ be a random variable that represents the number of times a sky mermaid is spotted during the flights from Narnia over the year.\n",
-    "Then $X$ is modelled by a **binomial distribution**, with parameters $n$ being the number of flights flown, and $p=0.17$.\n",
-    "\n",
-    "In 20XX, $X \\sim B(18,0.17)$."
+    "Then $X$ is modelled by a **binomial distribution**, with parameters $n$ being the number of flights flown, and $p=0.17$, so $X \\sim B(18,0.17)$."
    ]
   },
   {
